# calculator

./: README.md  main.py  main.spec  pyproject.toml
