[project]
name = "hard-python-flex"
version = "0.1.0"
description = ""
authors = [
    {name = "Arteposok",email = "aeposokhov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
